# papers-please

./: .env.example  .gitignore  README.md  compose.yaml  download.py  fetch.py  flake.nix  logger.py  main.py  pyproject.toml  shell.nix
db/: connection.py  models.py
services/backend/: Dockerfile  api.py  config.py  config.yaml  log.py  models.py  pinecone.py  pyproject.toml  schemas.py  search.py  worker.py
services/backend/db/: connection.py  models.py
services/backend/ingest/: fetcher.py  schemas.py
services/backend/process/: chunker.py  embedder.py
services/data/: cleaner.py  fetch_metadata.py  fetcher.py  interface.py  orm.py  templates.py
services/db/: schema.sql
services/frontend/: Dockerfile  index.html  package-lock.json  package.json
services/frontend/src/: App.jsx  api.js
services/frontend/src/pages/: Documents.jsx  Fetch.jsx  Search.jsx
services/ingest/: fetcher.py
services/postgres/: 01_schema.sql
services/process/: chunker.py  embedder.py
