[project]
name = "PapersPlease"
version = "0.1.0"
description = "A personal RAG system for research papers"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.88.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pinecone>=8.1.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.34.0",
    "retry>=0.9.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "transformers>=4.40",
    "python-json-logger>=4.1.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
